// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site Footer Core EC renders correctly 1`] = `
<jest>
  <footer
    class="ecl-site-footer ecl-site-footer--split-columns"
  >
    <div
      class="ecl-container ecl-site-footer__container"
    >
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <a
              aria-label="European Commission"
              class="ecl-link ecl-link--standalone ecl-site-footer__logo-link"
              href="/example"
            >
              <picture
                class="ecl-picture ecl-site-footer__picture"
                title="European Commission"
              >
                <source
                  media="(min-width: 996px)"
                  srcset="/logo-ec.svg"
                />
                <img
                  alt="European Commission logo"
                  class="ecl-site-footer__logo-image"
                  src="/logo-ec.svg"
                />
              </picture>
            </a>
            <div
              class="ecl-site-footer__description"
            >
              This site is managed by:
              <br />
              [name of the manager of the site]
            </div>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section ecl-site-footer__section--separator"
          >
            <ul
              class="ecl-site-footer__list ecl-site-footer__list--columns"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/strategy-and-policy_en"
                >
                  Strategy
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/about-european-commission_en"
                >
                  About the European Commission
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/business-economy-euro_en"
                >
                  Business, Economy, Euro
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/live-work-travel-eu_en"
                >
                  Live, work, travel in the EU
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/law_en"
                >
                  Law
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/funding-tenders_en"
                >
                  Funding, Tenders
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/research-and-innovation_en"
                >
                  Research and innovation
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/energy-climate-change-environment_en"
                >
                  Energy, Climate change, Environment
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/education_en"
                >
                  Education
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/aid-development-cooperation-fundamental-rights_en"
                >
                  Aid, Development cooperation, Fundamental rights
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/food-farming-fisheries_en"
                >
                  Food, Farming, Fisheries
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/eu-regional-and-urban-development_en"
                >
                  EU regional and urban development
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/jobs-european-commission_en"
                >
                  Jobs at the European Commission
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/statistics_en"
                >
                  Statistics
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://ec.europa.eu/commission/presscorner/home/en"
                >
                  Press Corner
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/events_en"
                >
                  Events
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/publications_en"
                >
                  Publications
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/about-european-commissions-web-presence_en"
                >
                  About the European Commission's web presence
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/about-european-commission/contact_en"
                >
                  Contact the European Commission
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/accessibility-statement_en"
                >
                  Accessibility
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--icon ecl-site-footer__link"
                  href="https://european-union.europa.eu/contact-eu/social-media-channels_en#/search?page=0&institutions=european_commission"
                >
                  <span
                    class="ecl-link__label"
                  >
                    Follow the European Commission on social media
                  </span>
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--2xs ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#external"
                    />
                  </svg>
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/resources-partners_en"
                >
                  Resources for partners
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section ecl-site-footer__section--split-list"
          >
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/languages-our-websites_en"
                >
                  Languages on our websites
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/cookies_en"
                >
                  Cookies
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/privacy-policy_en"
                >
                  Privacy policy
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/legal-notice_en"
                >
                  Legal notice
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`Site Footer Core EC renders correctly with extra attributes 1`] = `
<jest>
  <footer
    class="ecl-site-footer ecl-site-footer--split-columns"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container ecl-site-footer__container"
    >
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <a
              aria-label="European Commission"
              class="ecl-link ecl-link--standalone ecl-site-footer__logo-link"
              href="/example"
            >
              <picture
                class="ecl-picture ecl-site-footer__picture"
                title="European Commission"
              >
                <source
                  media="(min-width: 996px)"
                  srcset="/logo-ec.svg"
                />
                <img
                  alt="European Commission logo"
                  class="ecl-site-footer__logo-image"
                  src="/logo-ec.svg"
                />
              </picture>
            </a>
            <div
              class="ecl-site-footer__description"
            >
              This site is managed by:
              <br />
              [name of the manager of the site]
            </div>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section ecl-site-footer__section--separator"
          >
            <ul
              class="ecl-site-footer__list ecl-site-footer__list--columns"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/strategy-and-policy_en"
                >
                  Strategy
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/about-european-commission_en"
                >
                  About the European Commission
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/business-economy-euro_en"
                >
                  Business, Economy, Euro
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/live-work-travel-eu_en"
                >
                  Live, work, travel in the EU
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/law_en"
                >
                  Law
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/funding-tenders_en"
                >
                  Funding, Tenders
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/research-and-innovation_en"
                >
                  Research and innovation
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/energy-climate-change-environment_en"
                >
                  Energy, Climate change, Environment
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/education_en"
                >
                  Education
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/aid-development-cooperation-fundamental-rights_en"
                >
                  Aid, Development cooperation, Fundamental rights
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/food-farming-fisheries_en"
                >
                  Food, Farming, Fisheries
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/eu-regional-and-urban-development_en"
                >
                  EU regional and urban development
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/jobs-european-commission_en"
                >
                  Jobs at the European Commission
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/statistics_en"
                >
                  Statistics
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://ec.europa.eu/commission/presscorner/home/en"
                >
                  Press Corner
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/events_en"
                >
                  Events
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/publications_en"
                >
                  Publications
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/about-european-commissions-web-presence_en"
                >
                  About the European Commission's web presence
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/about-european-commission/contact_en"
                >
                  Contact the European Commission
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/accessibility-statement_en"
                >
                  Accessibility
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--icon ecl-site-footer__link"
                  href="https://european-union.europa.eu/contact-eu/social-media-channels_en#/search?page=0&institutions=european_commission"
                >
                  <span
                    class="ecl-link__label"
                  >
                    Follow the European Commission on social media
                  </span>
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--2xs ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#external"
                    />
                  </svg>
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/resources-partners_en"
                >
                  Resources for partners
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section ecl-site-footer__section--split-list"
          >
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/languages-our-websites_en"
                >
                  Languages on our websites
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/cookies_en"
                >
                  Cookies
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/privacy-policy_en"
                >
                  Privacy policy
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/legal-notice_en"
                >
                  Legal notice
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`Site Footer Core EC renders correctly with extra class names 1`] = `
<jest>
  <footer
    class="ecl-site-footer ecl-site-footer--split-columns custom-class custom-class--test"
  >
    <div
      class="ecl-container ecl-site-footer__container"
    >
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <a
              aria-label="European Commission"
              class="ecl-link ecl-link--standalone ecl-site-footer__logo-link"
              href="/example"
            >
              <picture
                class="ecl-picture ecl-site-footer__picture"
                title="European Commission"
              >
                <source
                  media="(min-width: 996px)"
                  srcset="/logo-ec.svg"
                />
                <img
                  alt="European Commission logo"
                  class="ecl-site-footer__logo-image"
                  src="/logo-ec.svg"
                />
              </picture>
            </a>
            <div
              class="ecl-site-footer__description"
            >
              This site is managed by:
              <br />
              [name of the manager of the site]
            </div>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section ecl-site-footer__section--separator"
          >
            <ul
              class="ecl-site-footer__list ecl-site-footer__list--columns"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/strategy-and-policy_en"
                >
                  Strategy
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/about-european-commission_en"
                >
                  About the European Commission
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/business-economy-euro_en"
                >
                  Business, Economy, Euro
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/live-work-travel-eu_en"
                >
                  Live, work, travel in the EU
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/law_en"
                >
                  Law
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/funding-tenders_en"
                >
                  Funding, Tenders
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/research-and-innovation_en"
                >
                  Research and innovation
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/energy-climate-change-environment_en"
                >
                  Energy, Climate change, Environment
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/education_en"
                >
                  Education
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/aid-development-cooperation-fundamental-rights_en"
                >
                  Aid, Development cooperation, Fundamental rights
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/food-farming-fisheries_en"
                >
                  Food, Farming, Fisheries
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/eu-regional-and-urban-development_en"
                >
                  EU regional and urban development
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/jobs-european-commission_en"
                >
                  Jobs at the European Commission
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/statistics_en"
                >
                  Statistics
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://ec.europa.eu/commission/presscorner/home/en"
                >
                  Press Corner
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/events_en"
                >
                  Events
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/publications_en"
                >
                  Publications
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/about-european-commissions-web-presence_en"
                >
                  About the European Commission's web presence
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/about-european-commission/contact_en"
                >
                  Contact the European Commission
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/accessibility-statement_en"
                >
                  Accessibility
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--icon ecl-site-footer__link"
                  href="https://european-union.europa.eu/contact-eu/social-media-channels_en#/search?page=0&institutions=european_commission"
                >
                  <span
                    class="ecl-link__label"
                  >
                    Follow the European Commission on social media
                  </span>
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--2xs ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#external"
                    />
                  </svg>
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/resources-partners_en"
                >
                  Resources for partners
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section ecl-site-footer__section--split-list"
          >
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/languages-our-websites_en"
                >
                  Languages on our websites
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/cookies_en"
                >
                  Cookies
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/privacy-policy_en"
                >
                  Privacy policy
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/legal-notice_en"
                >
                  Legal notice
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`Site Footer Core EU renders correctly 1`] = `
<jest>
  <footer
    class="ecl-site-footer"
  >
    <div
      class="ecl-container ecl-site-footer__container"
    >
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <a
              aria-label="European Union"
              class="ecl-link ecl-link--standalone ecl-site-footer__logo-link"
              href="/example"
            >
              <picture
                class="ecl-picture ecl-site-footer__picture"
                title="European Union"
              >
                <source
                  media="(min-width: 996px)"
                  srcset="/logo-eu.svg"
                />
                <img
                  alt="European Union logo"
                  class="ecl-site-footer__logo-image"
                  src="/logo-mobile-eu.svg"
                />
              </picture>
            </a>
            <div
              class="ecl-site-footer__description"
            >
              This site is managed by: [name of the manager of the site]
            </div>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Contact the EU
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                
              Call us               
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="tel:0080067891011"
                >
                  00 800 6 7 8 9 10 11
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                
              Use other               
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/contact-eu/call-us_en"
                >
                  telephone options
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                
              Write us via our               
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/contact-eu/write-us_en"
                >
                  contact form
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                
              Meet us at one of the               
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/contact-eu/meet-us_en"
                >
                  EU centres
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Social media
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                
              Search for               
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/contact-eu/social-media-channels_en"
                >
                  EU social media channels
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Legal
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/languages-our-websites_en"
                >
                  Languages on our websites
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/privacy-policy_en"
                >
                  Privacy policy
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/legal-notice_en"
                >
                  Legal notice
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/cookies_en"
                >
                  Cookies
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/web-accessibility-policy_en"
                >
                  Accessibility
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section ecl-site-footer__section--desktop"
          >
            <h2
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              EU institutions
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="http://www.europarl.europa.eu/portal/"
                >
                  European Parliament
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="http://www.consilium.europa.eu/en/european-council/"
                >
                  European Council
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="http://www.consilium.europa.eu/en/home/"
                >
                  Council of the European Union
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://commission.europa.eu/index_en"
                >
                  European Commission
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="http://curia.europa.eu/jcms/jcms/j_6/en/"
                >
                  Court of Justice of the European Union (CJEU)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://www.ecb.europa.eu/home/html/index.en.html"
                >
                  European Central Bank (ECB)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="http://www.eca.europa.eu/en"
                >
                  European Court of Auditors (ECA)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://eeas.europa.eu/headquarters/headquarters-homepage_en"
                >
                  European External Action Service (EEAS)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="http://www.eesc.europa.eu/?i=portal.en.home"
                >
                  European Economic and Social Committee (EESC)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="http://cor.europa.eu/en/"
                >
                  European Committee of the Regions (CoR)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://www.eib.org/en/index.htm"
                >
                  European Investment Bank (EIB)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://www.ombudsman.europa.eu/en/home"
                >
                  European Ombudsman
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
                >
                  European Data Protection Supervisor (EDPS)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://edpb.europa.eu/edpb_en"
                >
                  The European Data Protection Board
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://epso.europa.eu/en"
                >
                  European Personnel Selection Office
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://op.europa.eu/en/home"
                >
                  Publications Office of the European Union
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/institutions-law-budget/institutions-and-bodies/institutions-and-bodies-profiles_en?f%5B0%5D=oe_organisation_eu_type%3Ahttp%3A//publications.europa.eu/resource/authority/corporate-body-classification/AGENCY_DEC&f%5B1%5D=oe_organisation_eu_type%3Ahttp%3A//publications.europa.eu/resource/authority/corporate-body-classification/AGENCY_EXEC&f%5B2%5D=oe_organisation_eu_type%3Ahttp%3A//publications.europa.eu/resource/authority/corporate-body-classification/EU_JU"
                >
                  Agencies
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section ecl-site-footer__section--mobile"
          >
            <h2
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              EU institutions
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                
              Search for               
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  EU institutions
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`Site Footer Harmonised EC renders correctly 1`] = `
<jest>
  <footer
    class="ecl-site-footer"
  >
    <div
      class="ecl-container ecl-site-footer__container"
    >
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section ecl-site-footer__section--site-info"
          >
            <h2
              class="ecl-site-footer__title"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-site-footer__title-link"
                href="/example"
              >
                Site name
              </a>
            </h2>
            <div
              class="ecl-site-footer__description"
            >
              This site is managed by:
              <br />
              [name of the manager of the site]
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Accessibility
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title"
            >
              Contact us
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Contact information of the DG
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title"
            >
              Follow us on
            </h2>
            <ul
              class="ecl-site-footer__list ecl-site-footer__list--inline"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--icon ecl-site-footer__link"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icon-social-media.svg#facebook-negative"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Facebook
                  </span>
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--icon ecl-site-footer__link"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icon-social-media.svg#twitter-negative"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Twitter
                  </span>
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--icon ecl-site-footer__link"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icon-social-media.svg#linkedin-negative"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Linkedin
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title"
            >
              About us
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Information about the DG
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Information about the DG
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title"
            >
              Related sites
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Related link 1
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Related link 2
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title"
            >
              More information on
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Class name 1
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Class name 2
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <a
              aria-label="European Commission"
              class="ecl-link ecl-link--standalone ecl-site-footer__logo-link"
              href="https://commission.europa.eu/index_en"
            >
              <picture
                class="ecl-picture ecl-site-footer__picture"
                title="European Commission"
              >
                <source
                  media="(min-width: 996px)"
                  srcset="/logo-ec.svg"
                />
                <img
                  alt="European Commission logo"
                  class="ecl-site-footer__logo-image"
                  src="/logo-ec.svg"
                />
              </picture>
            </a>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section ecl-site-footer__section--split-list"
          >
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/about-european-commission/contact_en"
                >
                  Contact the European Commission
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--icon ecl-site-footer__link"
                  href="https://european-union.europa.eu/contact-eu/social-media-channels_en#/search?page=0&institutions=european_commission"
                >
                  <span
                    class="ecl-link__label"
                  >
                    Follow the European Commission on social media
                  </span>
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--2xs ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#external"
                    />
                  </svg>
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/resources-partners_en"
                >
                  Resources for partners
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section ecl-site-footer__section--split-list"
          >
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/language-policy_en"
                >
                  Languages on our websites
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/cookies_en"
                >
                  Cookies
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/privacy-policy_en"
                >
                  Privacy policy
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/legal-notice_en"
                >
                  Legal notice
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`Site Footer Harmonised EU renders correctly 1`] = `
<jest>
  <footer
    class="ecl-site-footer"
  >
    <div
      class="ecl-container ecl-site-footer__container"
    >
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section ecl-site-footer__section--site-info"
          >
            <h2
              class="ecl-site-footer__title"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-site-footer__title-link"
                href="/example"
              >
                Site name
              </a>
            </h2>
            <div
              class="ecl-site-footer__description"
            >
              This site is managed by: [name of the manager of the site]
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Accessibility
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Contact site name
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Link
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Follow us
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon ecl-site-footer__link"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icon-social-media.svg#facebook"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Social 1
                  </span>
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon ecl-site-footer__link"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icon-social-media.svg#twitter"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Social 2
                  </span>
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--icon ecl-site-footer__link"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icon-social-media.svg#mastodon"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Social 3
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Optional links
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Link 1
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Link 2
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Link 3
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  Link 4
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <a
              aria-label="European Union"
              class="ecl-link ecl-link--standalone ecl-site-footer__logo-link"
              href="/example"
            >
              <picture
                class="ecl-picture ecl-site-footer__picture"
                title="European Union"
              >
                <source
                  media="(min-width: 996px)"
                  srcset="/logo-eu.svg"
                />
                <img
                  alt="European Union logo"
                  class="ecl-site-footer__logo-image"
                  src="/logo-mobile-eu.svg"
                />
              </picture>
            </a>
            <div
              class="ecl-site-footer__description"
            >
              Discover more on 
              <a
                class="ecl-link ecl-link--standalone"
                href="/example"
              >
                europa.eu
              </a>
            </div>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Contact the EU
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                
              Call us               
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  00 800 6 7 8 9 10 11
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                
              Use other               
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  telephone options
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                
              Write us via our               
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  contact form
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                
              Meet us at one of the               
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  EU centres
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Social media
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                
              Search for               
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  EU social media channels
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              Legal
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/languages-our-websites_en"
                >
                  Languages on our websites
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/privacy-policy_en"
                >
                  Privacy policy
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/legal-notice_en"
                >
                  Legal notice
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/cookies_en"
                >
                  Cookies
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section ecl-site-footer__section--desktop"
          >
            <h2
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              EU institutions
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="http://www.europarl.europa.eu/portal/"
                >
                  European Parliament
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="http://www.consilium.europa.eu/en/european-council/"
                >
                  European Council
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="http://www.consilium.europa.eu/en/home/"
                >
                  Council of the European Union
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://commission.europa.eu/index_en"
                >
                  European Commission
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="http://curia.europa.eu/jcms/jcms/j_6/en/"
                >
                  Court of Justice of the European Union (CJEU)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://www.ecb.europa.eu/home/html/index.en.html"
                >
                  European Central Bank (ECB)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="http://www.eca.europa.eu/en"
                >
                  European Court of Auditors (ECA)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://eeas.europa.eu/headquarters/headquarters-homepage_en"
                >
                  European External Action Service (EEAS)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="http://www.eesc.europa.eu/?i=portal.en.home"
                >
                  European Economic and Social Committee (EESC)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="http://cor.europa.eu/en/"
                >
                  European Committee of the Regions (CoR)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://www.eib.org/en/index.htm"
                >
                  European Investment Bank (EIB)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://www.ombudsman.europa.eu/en/home"
                >
                  European Ombudsman
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://secure.edps.europa.eu/EDPSWEB/edps/EDPS?lang=en"
                >
                  European Data Protection Supervisor (EDPS)
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://edpb.europa.eu/edpb_en"
                >
                  The European Data Protection Board
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://epso.europa.eu/en"
                >
                  European Personnel Selection Office
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://op.europa.eu/en/home"
                >
                  Publications Office of the European Union
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="https://european-union.europa.eu/institutions-law-budget/institutions-and-bodies/institutions-and-bodies-profiles_en?f%5B0%5D=oe_organisation_eu_type%3Ahttp%3A//publications.europa.eu/resource/authority/corporate-body-classification/AGENCY_DEC&f%5B1%5D=oe_organisation_eu_type%3Ahttp%3A//publications.europa.eu/resource/authority/corporate-body-classification/AGENCY_EXEC&f%5B2%5D=oe_organisation_eu_type%3Ahttp%3A//publications.europa.eu/resource/authority/corporate-body-classification/EU_JU"
                >
                  Agencies
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section ecl-site-footer__section--mobile"
          >
            <h2
              class="ecl-site-footer__title ecl-site-footer__title--separator"
            >
              EU institutions
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                
              Search for               
                <a
                  class="ecl-link ecl-link--standalone ecl-site-footer__link"
                  href="/example"
                >
                  EU institutions
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`Site Footer Standardised EC renders correctly 1`] = `
<jest>
  <footer
    class="ecl-site-footer"
  >
    <div
      class="ecl-container ecl-site-footer__container"
    >
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section ecl-site-footer__section--site-info"
          >
            <h2
              class="ecl-site-footer__title"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-site-footer__title-link"
                href="/example"
              >
                Site name
              </a>
            </h2>
            <div
              class="ecl-site-footer__description"
            >
              This site is managed by:
              <br />
              [name of the manager of the site]
            </div>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Accessibility
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title"
            >
              Contact us
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Contact information of the DG
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title"
            >
              Follow us on
            </h2>
            <ul
              class="ecl-site-footer__list ecl-site-footer__list--inline"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--icon ecl-site-footer__link"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icon-social-media.svg#facebook-negative"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Facebook
                  </span>
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--icon ecl-site-footer__link"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icon-social-media.svg#twitter-negative"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Twitter
                  </span>
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--icon ecl-site-footer__link"
                  href="/example"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icon-social-media.svg#linkedin-negative"
                    />
                  </svg>
                  <span
                    class="ecl-link__label"
                  >
                    Linkedin
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title"
            >
              About us
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Information about the DG
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Information about the DG
                </a>
              </li>
            </ul>
          </div>
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title"
            >
              Related sites
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Related link 1
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Related link 2
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <h2
              class="ecl-site-footer__title"
            >
              More information on
            </h2>
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Class name 1
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="/example"
                >
                  Class name 2
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ecl-site-footer__row"
      >
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section"
          >
            <a
              aria-label="European Commission"
              class="ecl-link ecl-link--standalone ecl-site-footer__logo-link"
              href="https://commission.europa.eu/index_en"
            >
              <picture
                class="ecl-picture ecl-site-footer__picture"
                title="European Commission"
              >
                <source
                  media="(min-width: 996px)"
                  srcset="/logo-ec.svg"
                />
                <img
                  alt="European Commission logo"
                  class="ecl-site-footer__logo-image"
                  src="/logo-ec.svg"
                />
              </picture>
            </a>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section ecl-site-footer__section--split-list"
          >
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/about-european-commission/contact_en"
                >
                  Contact the European Commission
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-link--icon ecl-site-footer__link"
                  href="https://european-union.europa.eu/contact-eu/social-media-channels_en#/search?page=0&institutions=european_commission"
                >
                  <span
                    class="ecl-link__label"
                  >
                    Follow the European Commission on social media
                  </span>
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--2xs ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#external"
                    />
                  </svg>
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/resources-partners_en"
                >
                  Resources for partners
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="ecl-site-footer__column"
        >
          <div
            class="ecl-site-footer__section ecl-site-footer__section--split-list"
          >
            <ul
              class="ecl-site-footer__list"
            >
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/language-policy_en"
                >
                  Languages on our websites
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/cookies_en"
                >
                  Cookies
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/privacy-policy_en"
                >
                  Privacy policy
                </a>
              </li>
              <li
                class="ecl-site-footer__list-item"
              >
                <a
                  class="ecl-link ecl-link--standalone ecl-link--inverted ecl-site-footer__link"
                  href="https://commission.europa.eu/legal-notice_en"
                >
                  Legal notice
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;
